Fix overflow issues on mobile devices.

--- a/styles.css
+++ b/styles.css
@@ -22,6 +22,7 @@ body {
     background-image: linear-gradient(var(--flame-2), var(--flame-0));
     color: var(--primary-f);
     font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+    overflow: hidden;
 }
 
 a {
